[package]
name = "aegis"
version = "1.4.0"
edition = "2024"
license = "LicenseRef-MIT-Attribution"

[dependencies]
sha2 = "0.11.0"
csv = "1.4.0"
ureq = "3"
sha1 = "0.11.0"
totp-rs = "2.0.1"
aes-gcm = "0.10.3"
argon2 = "0.6.0-rc.3"
arboard = "3.6.1"
imgui = "0.12"
imgui-winit-support = "0.12"
imgui-glow-renderer = "0.12"
glow = "0.13"
winit = "0.29"
glutin = "0.31"
glutin-winit = "0.4"
raw-window-handle = "0.5"
rfd = "0.17.2"
rand = "0.10.0"
zeroize = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
base32 = "0.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

